[package]
name = "cryptography_pratice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]

uuid = {version = "1.3.3", features = ["v4"]}
openssl = {version = "0.10.54", features = ["vendored"]}
openssl-sys = "0.9.88"
rand = "0.8.5"